[gd_scene load_steps=12 format=2]

[ext_resource path="res://Import Files/Call of Ops Duty.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Import Files/GrindAndDeath_Demo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = -1.0
margin_right = 1280.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.392157, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Game Over"
align = 1
valign = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 475.0
margin_top = 660.0
margin_right = 806.0
margin_bottom = 700.0
rect_min_size = Vector2( 330, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ButtonContainer"]
margin_right = 331.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Return to Title Screen"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 620.0
margin_bottom = 548.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZombiesKilled" type="Label" parent="HBoxContainer/StatsContainer"]
margin_top = -1.0
margin_right = 620.0
margin_bottom = 179.0
rect_min_size = Vector2( 620, 180 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.392157, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Zombies Killed"
align = 2
valign = 1

[node name="BulletsFired" type="Label" parent="HBoxContainer/StatsContainer"]
margin_top = 183.0
margin_right = 620.0
margin_bottom = 363.0
rect_min_size = Vector2( 620, 180 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.392157, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Bullets Fired"
align = 2
valign = 1

[node name="TimeAlive" type="Label" parent="HBoxContainer/StatsContainer"]
margin_top = 368.0
margin_right = 620.0
margin_bottom = 548.0
rect_min_size = Vector2( 620, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.392157, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Time Alive"
align = 2
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 624.0
margin_right = 664.0
margin_bottom = 548.0
rect_min_size = Vector2( 40, 0 )

[node name="ValuesContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 668.0
margin_right = 1288.0
margin_bottom = 548.0
rect_min_size = Vector2( 620, 540 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ZombiesKilledValue" type="Label" parent="HBoxContainer/ValuesContainer"]
margin_top = -1.0
margin_right = 620.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 180 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1

[node name="BulletsFiredValue" type="Label" parent="HBoxContainer/ValuesContainer"]
margin_top = 183.0
margin_right = 620.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 180 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1

[node name="TimeAliveValue" type="Label" parent="HBoxContainer/ValuesContainer"]
margin_top = 367.0
margin_right = 620.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 180 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1
[connection signal="pressed" from="ButtonContainer/Button" to="." method="_on_Button_pressed"]
